[bumpversion]
current_version = 0.1.0
commit = True
tag = True
allow_dirty = True

[bumpversion:file:twhatter/__init__.py]
search = __version__ = '{current_version}'
replace = __version__ = '{new_version}'

[bdist_wheel]
universal = 1

[flake8]
exclude = docs

[aliases]
# Define setup.py command aliases here
test = pytest

[tool:pytest]
collect_ignore = ['setup.py']
markers =
    send_request: mark a test as requiring to send a specific web request (slow).

[coverage:run]
branch = True
source = twhatter, tests

[coverage:report]
precision = 2

[coverage:paths]
source =
        .
        /tmp/build/*/source/

[metadata]
name = twhatter
version = twhatter.__version__
author = theenglishway
author_email = me@theenglishway.eu
classifiers =
	Development Status :: 2 - Pre-Alpha
	Intended Audience :: Developers
	License :: OSI Approved :: BSD License
	Natural Language :: English
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.6
description = Scraper for Twitter
long_description = file: README.rst, HISTORY.rst
license = BSD license
keywords = twhatter
url = https://code.theenglishway.eu/theenglishway-utils/twhatter

[options]
packages = find:
zip_safe = False
include_package_data = True
setup_requires =
	pytest-runner
install_requires =
    bs4
    lxml
    requests
	Click
    sqlalchemy
    ipython
    user_agent
tests_require =
	pytest

[options.packages.find]
exclude =
	docs
	tests
	tests.*

[options.entry_points]
console_scripts =
	twhatter = twhatter.cli:main

[options.extras_require]
test =
	pytest
